# FastPixels

./: .gitignore  CMakeLists.txt  FastPixels.pro  README.md  asm.h  asmfuncs.nasm  asmfuncsAVX.nasm  asmfuncsSSSE3.nasm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
